documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API ERRVAL __stdcall L71_RTConfig(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTConfigEx(ULONG configval,INT taval,USHORT intfreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API LISTADDR __stdcall L71_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTReset(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_RTStatus(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_RTSWDRd(INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_SchedDisplay(ULONG nummsgs,LPULONG count);

L71W32API VOID __stdcall L71_SchedHook(INT index,LPVOID ptr);

L71W32API ERRVAL __stdcall L71_SchedInsEnd(HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);

L71W32API ULONG __stdcall L71_SchedMaxval(LPULONG array,ULONG arraycount);

L71W32API ULONG __stdcall L71_SchedMinval(LPULONG array,ULONG arraycount);

L71W32API VOID __stdcall L71_SchedPrint(LPSTR str,...);

L71W32API ERRVAL __stdcall L71_SEEPokeW(INT value,INT numbits,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdBit(LPINT valueptr,INT bitnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdL(LPULONG valueptr,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEERdW(LPINT valueptr,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEEWrBit(INT value,INT bitnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEEWrL(ULONG value,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_SEEWrW(INT value,INT addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_SEMMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_SEMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_SEMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_SEMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_Shl(ULONG dataval,USHORT cntval);

L71W32API ULONG __stdcall L71_Shr(ULONG dataval,USHORT cntval);

L71W32API VOID __stdcall L71_TimerClear(HCARD handleval);

L71W32API ULONG __stdcall L71_TimerRd(HCARD handleval);

L71W32API INT __stdcall L71_TimerResolution(INT timerresol,HCARD handleval);

L71W32API USHORT __stdcall L71_TimerResolutionEx(USHORT timershift,HCARD handleval);

L71W32API INT __stdcall L71_ValAsciiCmpi(LPSTR str1,LPSTR str2);

L71W32API LPSTR __stdcall L71_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

L71W32API VOID __stdcall L71_ValAsciiTrimLead(LPSTR buf);

L71W32API VOID __stdcall L71_ValAsciiTrimTrail(LPSTR buf);

L71W32API ULONG __stdcall L71_ValFromAscii(LPCSTR asciistr,INT radixval);

L71W32API USHORT __stdcall L71_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

L71W32API LPSTR __stdcall L71_ValIncAscii(LPSTR asciistr);

L71W32API LPSTR __stdcall L71_ValInccAscii(LPSTR asciistr);

L71W32API BOOL __stdcall L71_ValIsLower(INT value);

L71W32API INT __stdcall L71_ValLenAscii(INT numbits,INT radixval);

L71W32API USHORT __stdcall L71_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);

L71W32API USHORT __stdcall L71_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

L71W32API USHORT __stdcall L71_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

L71W32API LPSTR __stdcall L71_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

L71W32API INT __stdcall L71_ValToUpper(INT value);

L71W32API VOID __stdcall L71_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);

L71W32API VOID __stdcall L71_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);

L71W32API ERRVAL __stdcall L71_XmtAlloc(ULONG configval,USHORT framecount,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtConfigExxx(ULONG bcconfigval,ULONG msgconfigval,USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

L71W32API USHORT __stdcall L71_XmtCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_XmtCountWr(USHORT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_XmtDataCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_XmtDataCountWr(USHORT countval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtFreq(USHORT framefreq,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtFreqEx(USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtFreqExx(USHORT framefreq,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_XmtIndex(USHORT framenum,HCARD handleval);