documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Function L71_RTConfig Lib "L71W32.DLL" Alias "_L71_RTConfig@16" (ByVal configval As UInt32, ByVal taval As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RTConfigEx Lib "L71W32.DLL" Alias "_L71_RTConfigEx@16" (ByVal configval As UInt32, ByVal taval As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RTConfigExx Lib "L71W32.DLL" Alias "_L71_RTConfigExx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RTConfigMsg Lib "L71W32.DLL" Alias "_L71_RTConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTCreateList Lib "L71W32.DLL" Alias "_L71_RTCreateList@32" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTCreateListEx Lib "L71W32.DLL" Alias "_L71_RTCreateListEx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTCreateListExx Lib "L71W32.DLL" Alias "_L71_RTCreateListExx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTCreateMsg Lib "L71W32.DLL" Alias "_L71_RTCreateMsg@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTGetMsg Lib "L71W32.DLL" Alias "_L71_RTGetMsg@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RTReset Lib "L71W32.DLL" Alias "_L71_RTReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RTStatus Lib "L71W32.DLL" Alias "_L71_RTStatus@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_RTSWDRd Lib "L71W32.DLL" Alias "_L71_RTSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_RTSWDWr Lib "L71W32.DLL" Alias "_L71_RTSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedBuild Lib "L71W32.DLL" Alias "_L71_SchedBuild@16" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedBuildEx Lib "L71W32.DLL" Alias "_L71_SchedBuildEx@28" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedBuildExx Lib "L71W32.DLL" Alias "_L71_SchedBuildExx@28" (ByVal frametime As UInt32, ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedCalc Lib "L71W32.DLL" Alias "_L71_SchedCalc@8" (ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_SchedDisplay Lib "L71W32.DLL" Alias "_L71_SchedDisplay@8" (ByVal nummsgs As UInt32, ByRef count As UInt32)
    Public Declare Sub L71_SchedHook Lib "L71W32.DLL" Alias "_L71_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
    Public Declare Function L71_SchedInsEnd Lib "L71W32.DLL" Alias "_L71_SchedInsEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedInsMsg Lib "L71W32.DLL" Alias "_L71_SchedInsMsg@12" (ByVal index As UInt32, ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedInsStart Lib "L71W32.DLL" Alias "_L71_SchedInsStart@12" (ByVal frametime As UInt32, ByVal count As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SchedMaxval Lib "L71W32.DLL" Alias "_L71_SchedMaxval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function L71_SchedMinval Lib "L71W32.DLL" Alias "_L71_SchedMinval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Sub L71_SchedPrint Lib "L71W32.DLL" Alias "" (ByVal ParamArray list() As String)
    Public Declare Function L71_SEEPokeW Lib "L71W32.DLL" Alias "_L71_SEEPokeW@12" (ByVal value As Int32, ByVal numbits As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEERdBit Lib "L71W32.DLL" Alias "_L71_SEERdBit@12" (ByRef valueptr As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEERdL Lib "L71W32.DLL" Alias "_L71_SEERdL@12" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEERdW Lib "L71W32.DLL" Alias "_L71_SEERdW@12" (ByRef valueptr As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEEWrBit Lib "L71W32.DLL" Alias "_L71_SEEWrBit@12" (ByVal value As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEEWrL Lib "L71W32.DLL" Alias "_L71_SEEWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEEWrW Lib "L71W32.DLL" Alias "_L71_SEEWrW@12" (ByVal value As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_SEMMRdW Lib "L71W32.DLL" Alias "_L71_SEMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_SEMMWrW Lib "L71W32.DLL" Alias "_L71_SEMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_SEMRdW Lib "L71W32.DLL" Alias "_L71_SEMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_SEMWrW Lib "L71W32.DLL" Alias "_L71_SEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_Shl Lib "L71W32.DLL" Alias "_L71_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function L71_Shr Lib "L71W32.DLL" Alias "_L71_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub L71_TimerClear Lib "L71W32.DLL" Alias "_L71_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function L71_TimerRd Lib "L71W32.DLL" Alias "_L71_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_TimerResolution Lib "L71W32.DLL" Alias "_L71_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_TimerResolutionEx Lib "L71W32.DLL" Alias "_L71_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_ValAsciiCmpi Lib "L71W32.DLL" Alias "_L71_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function L71_ValAsciiCpy Lib "L71W32.DLL" Alias "_L71_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub L71_ValAsciiTrimLead Lib "L71W32.DLL" Alias "_L71_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub L71_ValAsciiTrimTrail Lib "L71W32.DLL" Alias "_L71_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function L71_ValFromAscii Lib "L71W32.DLL" Alias "_L71_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function L71_ValGetBits Lib "L71W32.DLL" Alias "_L71_ValGetBits@12" (ByVal oldvalue As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function L71_ValIncAscii Lib "L71W32.DLL" Alias "_L71_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L71_ValInccAscii Lib "L71W32.DLL" Alias "_L71_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L71_ValIsLower Lib "L71W32.DLL" Alias "_L71_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function L71_ValLenAscii Lib "L71W32.DLL" Alias "_L71_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function L71_ValPackCWD Lib "L71W32.DLL" Alias "_L71_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Function L71_ValPackRTCWD Lib "L71W32.DLL" Alias "_L71_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
    Public Declare Function L71_ValPutBits Lib "L71W32.DLL" Alias "_L71_ValPutBits@16" (ByVal oldvalue As UInt16, ByVal newfld As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function L71_ValToAscii Lib "L71W32.DLL" Alias "_L71_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function L71_ValToUpper Lib "L71W32.DLL" Alias "_L71_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Sub L71_ValUnpackCWD Lib "L71W32.DLL" Alias "_L71_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
    Public Declare Sub L71_ValUnpackRTCWD Lib "L71W32.DLL" Alias "_L71_ValUnpackRTCWD@28" (ByVal cwd As UInt16, ByRef bcastflag As Int32, ByRef mcflag As Int32, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef count As Int32)
    Public Declare Function L71_XmtAlloc Lib "L71W32.DLL" Alias "_L71_XmtAlloc@12" (ByVal configval As UInt32, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtConfigExxx Lib "L71W32.DLL" Alias "_L71_XmtConfigExxx@24" (ByVal bcconfigval As UInt32, ByVal msgconfigval As UInt32, ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtCountRd Lib "L71W32.DLL" Alias "_L71_XmtCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_XmtCountWr Lib "L71W32.DLL" Alias "_L71_XmtCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_XmtDataCountRd Lib "L71W32.DLL" Alias "_L71_XmtDataCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_XmtDataCountWr Lib "L71W32.DLL" Alias "_L71_XmtDataCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_XmtFreq Lib "L71W32.DLL" Alias "_L71_XmtFreq@8" (ByVal framefreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtFreqEx Lib "L71W32.DLL" Alias "_L71_XmtFreqEx@16" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtFreqExx Lib "L71W32.DLL" Alias "_L71_XmtFreqExx@36" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal bcconfigval As UInt32, ByVal bctotal As UInt16, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtIndex Lib "L71W32.DLL" Alias "_L71_XmtIndex@8" (ByVal framenum As UInt16, ByVal handleval As UInt32) As UInt32
